# Using_CMake_Linux

./: .gitignore  CMakeLists.txt  MAINconfig.h.in  main.cpp  run.sh
.github/workflows/: cmake-single-platform.yml
adder_folder/: adder.cpp  adder.h
